fixed jumbotron so is less stretched

--- a/src/index.css
+++ b/src/index.css
@@ -32,8 +32,9 @@ header {
 main {
 
   .jumbo {
-    height: 200px;
     width: 100%;
+    height: auto;
+    max-height: 300px;
   }
   
   .bg-black {
